fixed bugs on IE8 and added onOpen and onClose events.

--- a/Source/mooCompleter.css
+++ b/Source/mooCompleter.css
@@ -155,7 +155,7 @@ li.mc-content-auto-completer-li-highlight {
 }
 
 div.mc-content-completer-element-container-div {
-	clear: both;;
+	clear: both;
 }
 
 ul.mc-content-completer-element-container-ul li {
